Fixes treasure coin styling on small end of large device size. (#788)

--- a/charactersheet/site.css
+++ b/charactersheet/site.css
@@ -238,6 +238,13 @@ textarea.dark-area {
   color: #128770;
 }
 
+.coin-input {
+  padding-right: 10px;
+}
+.coin-input input {
+  min-width: 75px;
+}
+
 .alert .close {
   top:-7px;
 }
